# kaku-yaku-api

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
data/jm-dict/: dtd-jmdict.xml
src/: app.module.ts  main.ts
src/migrations/: 1739000000000-AddTatoebaSentencesTable.ts
src/modules/analysis/: analysis.controller.ts  analysis.module.ts  analysis.service.ts
src/modules/analysis/dto/: analysis-result.dto.ts  analyze-request.dto.ts
src/modules/dictionary/: dictionary.module.ts
src/modules/dictionary/entities/: conjugation.entity.ts  entry.entity.ts  example.entity.ts  meaning.entity.ts
src/modules/grammar/: grammar.module.ts
src/modules/grammar/entities/: grammar-example.entity.ts  grammar-rule.entity.ts
src/modules/raw/: raw.module.ts  raw.service.ts
src/modules/raw/data-loader/: data-loader.service.ts
src/modules/raw/data-loader/helpers/: jm-dict-parser.ts  kanji-dict.ts  tatoeba-parser.ts
src/modules/raw/entities/: jm-dict.entity.ts  kanji-dict.entity.ts  tatoeba-sentence.entity.ts
src/modules/raw/jm-dict/: jm-dict.module.ts  jm-dict.service.ts
src/modules/raw/kanji-dict/: kanji-dict.module.ts  kanji-dict.service.ts
src/modules/raw/tatoeba/: tatoeba.module.ts  tatoeba.service.ts
src/modules/sudachi/: sudachi.controller.ts  sudachi.module.ts  sudachi.service.ts
src/modules/sudachi/dto/: analyze-sentence.dto.ts
src/modules/text-analysis/: text-analysis.module.ts
sudachi-native/: Cargo.toml  README.md  build-dict-example.js  example.js  index.d.ts  index.js  package.json
sudachi-native/src/: lib.rs
